added the ability toi create a user to log in with

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "npm": ">= 3.0.0"
   },
   "scripts": {
-    "test": "npm run compile && npm run jest",
+    "test": "npm run compile && npm run mocha",
     "dev": "ts-node-dev --no-notify src/",
     "start": "npm run compile && node lib/",
-    "jest": "jest  --forceExit",
+    "mocha": "ts-mocha \"test/**/*.ts\" --recursive --exit",
     "compile": "shx rm -rf lib/ && tsc"
   },
   "types": "lib/",
@@ -53,14 +53,14 @@
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/helmet": "0.0.45",
-    "@types/jest": "^25.1.2",
     "@types/jsonwebtoken": "^8.3.7",
+    "@types/mocha": "^7.0.1",
     "@types/serve-favicon": "^2.5.0",
     "axios": "^0.19.2",
-    "jest": "^25.1.0",
+    "mocha": "^6.2.2",
     "nodemon": "^2.0.2",
     "shx": "^0.3.2",
-    "ts-jest": "^25.2.0",
+    "ts-mocha": "^6.0.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^5.20.1",
     "typescript": "^3.7.5"
