--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@feathersjs/feathers": "^4.5.1",
     "@feathersjs/socketio": "^4.5.1",
     "@feathersjs/transport-commons": "^4.5.1",
+    "@types/uuid": "^3.4.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-knex": "^7.1.0",
@@ -47,6 +48,7 @@
     "knex": "^0.20.9",
     "pg": "^7.18.1",
     "serve-favicon": "^2.5.0",
+    "uuid": "^3.4.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
