--- a/package.json
+++ b/package.json
@@ -21,11 +21,25 @@
   },
   "dependencies": {
     "@nestjs/common": "^6.10.14",
+    "@nestjs/config": "^0.2.4",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/jwt": "^6.1.2",
+    "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/typeorm": "^6.3.3",
+    "@types/bcrypt": "^3.0.0",
+    "@types/uuid": "^3.4.7",
+    "bcrypt": "^4.0.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "typeorm": "^0.2.22",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
@@ -34,6 +48,7 @@
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
     "@types/node": "^13.1.6",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
